# bwell-logkit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: basic_usage.py
src/bwell_logkit/: __init__.py  exceptions.py  extractor.py  logs.py  reader.py  scene.py  types.py
tests/: __init__.py  conftest.py  test_extractor.py  test_logs.py  test_reader.py  test_scene.py
